@@ -1,3 +1,9 @@
+globus-gram-protocol (12.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 13:51:40 -0500
+
 globus-gram-protocol (12.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
